docs: Update SRS reverse engineering document with Chapters IV-XVII